# mafia-RL-env

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-train.txt
demo/: video_script.md
demo/transcripts/: selfplay_100.json
docs/: api_deltas.md  architecture.md  reward_design.md  training_notes.md
notebooks/: 01_walkthrough.ipynb  02_train.ipynb  03_compare.ipynb
scripts/: colab_bootstrap.sh  compare_runs.py  eval_model.py  make_demo_assets.py  play_manual.py  play_self_random.py
tests/: conftest.py  test_client.py  test_environment.py  test_game_engine.py  test_npc.py  test_parser.py  test_rewards.py  test_rollout.py
training/: dataset.py  reward_funcs.py  rollout.py  system_prompts.py  train_grpo.py  trainer_config.py
werewolf_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
werewolf_env/game/: __init__.py  constants.py  engine.py  npc.py  parser.py  prompts.py  rewards.py  state.py
werewolf_env/server/: Dockerfile  __init__.py  app.py  requirements.txt  werewolf_environment.py
