[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deceit-werewolf"
version = "0.1.0"
description = "DECEIT — Werewolf/Mafia social-deduction OpenEnv environment for LLM RL training (project workspace)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "DECEIT Team" }]
keywords = ["openenv", "rl", "llm", "mafia", "werewolf", "social-deduction", "grpo"]
dependencies = [
    "openenv-core[core]>=0.2.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]
# Training extras are intentionally NOT pinned hard.
# Install on Colab via requirements-train.txt or the training notebook,
# because the right wheels depend on the GPU (T4 vs A100) and CUDA version.
train = [
    "trl>=0.20",
    "datasets>=2.18",
    "accelerate>=0.34",
    "peft>=0.12",
    "trackio",
    "matplotlib>=3.8",
    "huggingface-hub>=0.24",
]

[tool.setuptools.packages.find]
include = ["werewolf_env*"]
exclude = ["tests*", "scripts*", "training*", "notebooks*", "demo*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short --strict-markers"
markers = [
    "integration: tests that hit a live server",
    "slow: long-running tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
