# Env-local pyproject — used by `openenv push` / Docker build for HF Space.
# The repo-root pyproject.toml is for local dev; this one is for the Space.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-werewolf-env"
version = "0.1.0"
description = "DECEIT — Werewolf/Mafia social-deduction OpenEnv environment."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "openenv-core[core]>=0.2.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[project.scripts]
# Allows: `uv run --project . server` or `python -m werewolf_env.server.app`
server = "werewolf_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["werewolf_env", "werewolf_env.game", "werewolf_env.server"]
package-dir = { "werewolf_env" = ".", "werewolf_env.game" = "game", "werewolf_env.server" = "server" }
